--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ djangorestframework-simplejwt = "^5.3.1"
 coverage = "^7.5.4"
 drf-yasg = "^1.21.7"
 setuptools = "^70.2.0"
+stripe = "^10.1.0"
 
 
 [build-system]
