--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.6"
+django = "4.2.2"
 djangorestframework = "^3.15.1"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
@@ -18,6 +18,10 @@ coverage = "^7.5.4"
 drf-yasg = "^1.21.7"
 setuptools = "^70.2.0"
 stripe = "^10.1.0"
+celery = "^5.4.0"
+redis = "^5.0.7"
+django-celery-beat = "^2.6.0"
+eventlet = "^0.36.1"
 
 
 [build-system]
